...
class PageCreateViewModel(diary: Diary) {
    val diary = diary
    val cameraViewModel: CameraViewModel = PageCameraViewModelImp.getInstance()

    // Use SnapshotStateList for observable state
    var fields = mutableStateListOf(
        ValidatedTextFieldState("", "Título", ImeAction.Next, 1) { value ->
            updateField(0, value)
            validateField(0, value)
        },
        ValidatedTextFieldState("", "Contenido", ImeAction.Done, 20) { value ->
            updateField(1, value)
            validateField(1, value)
        }
    )
    var errors = mutableStateListOf("", "")

...
