...
                            model = BuildConfig.BACKEND_URL + user.imageUrl,
                            contentDescription = "Profile picture",
                            modifier = Modifier
                                .requiredSize(32.dp)
                                .clip(CircleShape)
                                .clickable { onClickAccount() }
                                .testTag("profile_pic"),
                            contentScale = ContentScale.Crop
                        )
                    } else {
                        Image(painter = painterResource(id =R.drawable.default_user),
                            contentDescription = "Profile picture",
                            modifier = Modifier
...
                    HorizontalDivider(modifier = Modifier.width(128.dp))
                    Row(modifier = Modifier
                        .clickable { navigator.navigate(DiariesScreenDestination()) }
                        .padding(8.dp)) {
                        Icon(
                            painterResource(id = R.drawable.my_diaries),
                            contentDescription = "Mis Diarios"
                        )
                        Spacer(modifier = Modifier.width(8.dp))
                        Text("Mis Diarios")
                    }
                    HorizontalDivider(modifier = Modifier.width(128.dp))
                    Row(modifier = Modifier
...
