...
                }
            }, modifier = Modifier
                .fillMaxWidth()
                .padding(10.dp),
            colors = ButtonDefaults.buttonColors(containerColor = Color(0xFF016723)),
            ) {
            Text("Crear Página")
        }
        LazyColumnList(items = pages) { page ->
            PageItem(page, onClick = {
                Log.d("PageListScreen", "Navigating to page details ${!showCreationMessage.value}")
                navigator.navigate(PageDetailsScreenDestination(page))
            })
...
