...

        item {
            Spacer(modifier = Modifier.height(16.dp))
            Column(horizontalAlignment = Alignment.CenterHorizontally, modifier = Modifier.fillMaxWidth()) {
                DefaultButton(
                    onClick = onSaveClick,
                    text = "Guardar"
                )
            }
        }
    }
}

...
